# QrssPiG

./: .travis.yml
cmake/Modules/: FindLibAirSpy.cmake  FindLibAirSpyHF.cmake  FindLibGROsmoSdr.cmake  FindLibHackRF.cmake  FindLibLimeSuite.cmake  FindLibOsmoSdr.cmake  FindLibSdrPlay.cmake  FindLibUSB1.cmake
docker/: Dockerfile_build_Debian_9  Dockerfile_build_Debian_Buster  Dockerfile_build_Ubuntu_16.04  Dockerfile_build_Ubuntu_17.04  Dockerfile_build_Ubuntu_17.10  Dockerfile_build_Ubuntu_18.04  Dockerfile_build_bionic
scripts/: install-libairspy.sh  install-libairspyhf+.sh  install-libhackrf.sh  install-liblimesuite.sh
src/: CMakeLists.txt  Config.h.in  QGInputAirSpy.cpp  QGInputAirSpy.h  QGInputAirSpyHF.cpp  QGInputAirSpyHF.h  QGInputDevice.cpp  QGInputDevice.h  QGInputGROsmoSdr.cpp  QGInputGROsmoSdr.h  QGInputHackRF.cpp  QGInputHackRF.h  QGInputLime.cpp  QGInputLime.h  QGInputOsmoSdr.cpp  QGInputOsmoSdr.h  QGInputPulseAudio.cpp  QGInputPulseAudio.h  QGInputRtlSdr.cpp  QGInputSdrPlay.cpp  QGInputSdrPlay.h  QrssPiG.cpp  QrssPiG.h  airspy_list_devices.cpp  airspy_list_devices.h  main.cpp
